--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,8 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
+* Version 0.2.30 (unreleased)
+
 * Version 0.2.29 (released 2008-10-21)
 
 ** DIGEST-MD5 server: Added callback to retrieve hashed secret.
