Cleanup pkg-config description.

--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -843,8 +843,8 @@ following early in your @code{main}:
 @section Building the source
 @cindex Compiling your application
 
-If you want to compile a source file including the `gsasl.h' header
-file, you must make sure that the compiler can find it in the
+If you want to compile a source file including the @file{gsasl.h}
+header file, you must make sure that the compiler can find it in the
 directory hierarchy.  This is accomplished by adding the path to the
 directory in which the header file is located to the compilers include
 file search path (via the @option{-I} option).
@@ -863,17 +863,17 @@ gcc -c foo.c `pkg-config libgsasl --cflags`
 
 Adding the output of @samp{pkg-config libgsasl --cflags} to the
 compilers command line will ensure that the compiler can find the
-`gsasl.h' header file.
+@file{gsasl.h} header file.
 
 A similar problem occurs when linking the program with the library.
 Again, the compiler has to find the library files.  For this to work,
-the path to the library files has to be added to the library search path
-(via the @option{-L} option).  For this, the option @option{--libs} to
-@command{pkg-config libgsasl} can be used.  For convenience, this option
-also outputs all other options that are required to link the program
-with the `libgsasl' libarary (for instance, the @samp{-lidn}
-option).  The example shows how to link @file{foo.o} with the `libgsasl'
-library to a program @command{foo}.
+the path to the library files has to be added to the library search
+path (via the @option{-L} option).  For this, the option
+@option{--libs} to @command{pkg-config libgsasl} can be used.  For
+convenience, this option also outputs all other options that are
+required to link the program with the libarary (for instance, the
+@samp{-lidn} option).  The example shows how to link @file{foo.o} with
+the library to a program @command{foo}.
 
 @example
 gcc -o foo foo.o `pkg-config libgsasl --libs`
