--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 GNU SASL README -- Important introductory notes.
-Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
 This directory holds GNU SASL which is an implementation of the Simple
@@ -18,7 +18,7 @@ licensed under the GNU General Public License license version 3.0 (or
 later).  See the file COPYING.
 
 The documentation (doc/) is licensed under the GNU Free Documentation
-License version 1.2 (or later).
+License version 1.3 (or later).
 
 If you need help to use GNU SASL, or wish to help others, you are
 invited to join our mailing list help-gsasl@gnu.org, see
