--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -15,7 +15,7 @@
 This manual was last updated @value{UPDATED} for version
 @value{VERSION} of GNU SASL.
 
-Copyright @copyright{} 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson.
+Copyright @copyright{} 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -126,7 +126,7 @@ version 2.1 or later.  The command-line application (src/), examples
 (examples/), self-test suite (tests/) are licensed under the GNU
 General Public License license version 3.0 or later.  The
 documentation (doc/) is licensed under the GNU Free Documentation
-License version 1.2 or later.
+License version 1.3 or later.
 
 @float Illustration,fig:abstraction
 @image{abstraction,10cm,5cm}
