--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 GNU SASL NEWS -- History of user-visible changes.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
 Note that changes to the GNU SASL Library is documented in lib/NEWS.
@@ -7,6 +7,8 @@ This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.30 (unreleased)
+
+** gsasl: Print web page links, per new GNU coding standard.
 
 ** doc: Modernize doxygen configuration.
 
