--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,8 @@ some servers.
 
 ** gsasl: Print web page links in --help, per new GNU coding standard.
 
+** tests: New self-test for the gsasl_client_suggest_mechanism function.
+
 ** doc: Modernize doxygen configuration.
 
 ** doc: Use permissive license for man pages.
