--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.0 (unreleased)
+* Version 1.0 (released 2009-01-23)
 
 ** gsasl: New parameter --priority to specify GnuTLS priority strings.
 Can be used to change TLS settings, which may be needed to talk to
