--- a/lib/NEWS
+++ b/lib/NEWS
@@ -13,9 +13,8 @@ comparisons to test version level.
 Currently only GNU LD and the Solaris linker supports it.  This helps
 Debian package tools to produce better dependencies.  Before we used
 Libtool -export-symbols-regex that created an anonymous version tag.
-We still fall back on -export-symbols-regex if the system does not
-support LD version scripts, although on most platforms this will just
-affect symbol visibility.
+We use -export-symbols-regex when the system does not support LD
+version scripts, but that only affect symbol visibility.
 
 ** libgsasl: Compiled with -fvisibility=hidden by default if supported.
 Currently only GCC supports it for ELF targets.  This hides internal
