--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 GNU SASL THANKS -- Acknowledgements.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
 GNU SASL uses libntlm by Grant Edwards maintained by Simon Josefsson;
@@ -36,6 +36,7 @@ Martin Rozee
 Pawel Widera
 Gazsó Attila
 Adam Goode <adam@spicenitz.org>
+Andery Melnikov <temnota.am@gmail.com>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
