--- a/lib/NEWS
+++ b/lib/NEWS
@@ -67,6 +67,8 @@ GSASL_VERSION_MAJOR: ADDED
 GSASL_VERSION_MINOR: ADDED
 GSASL_VERSION_PATCH: ADDED
 GSASL_VERSION_NUMBER: ADDED
+GSASL_QOP: ADDED
+GSASL_QOPS: ADDED
 
 * Version 1.0 (released 2009-01-23)
 
